namespaces/live.cloud-platform.service.justice.gov.uk/laa-submit-a-bulk-claim-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-submit-a-bulk-claim-preprod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "pre-production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-ccms-pui-teamonly"
    cloud-platform.justice.gov.uk/application: "Submit a bulk claim"
    cloud-platform.justice.gov.uk/owner: "PUI Modernisation: ccmspuimodernisation@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-cwa-bulk-upload"
    cloud-platform.justice.gov.uk/team-name: "laa-submit-a-bulk-claim"
    cloud-platform.justice.gov.uk/review-after: ""
